cmake_minimum_required(VERSION 3.17)

set(MSTL_ENABLE_REDIS OFF CACHE BOOL "Disable Redis database support" FORCE)

set(MSTL_CXX_COMPILE_VERSION 17)

set(CMAKE_CXX_STANDARD ${MSTL_CXX_COMPILE_VERSION})
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSTL_ENABLE_CUDA)
    project(MSTL_TEST VERSION 1.2.0 LANGUAGES CXX CUDA)

    set(CMAKE_CUDA_STANDARD ${MSTL_CXX_COMPILE_VERSION})
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)

    set(CMAKE_CUDA_ARCHITECTURES 89) # RTX40
else()
    project(MSTL_TEST VERSION 1.2.0 LANGUAGES CXX)
endif()


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(MSTL)

add_executable(${CMAKE_PROJECT_NAME} "main.cpp" "try.cpp" "try.h")

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE MSTL)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE MSTL)
